Fixed projects alignment issues on page

--- a/css/style.css
+++ b/css/style.css
@@ -746,12 +746,17 @@ pre {
   margin-bottom: 30px;
   background: #FFFFFF;
   z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 #fh5co-work .fh5co-work-item {
   position: relative;
   display: block;
-  float: left;
+  /* float: left; */
+  float: none;
   /* width: 100%;
   height: 100%; */
   border-bottom: none !important;
@@ -775,6 +780,9 @@ pre {
     width: 300px;
     height: 230px;
     border-radius: 20px;
+    width: 100%; /* Makes the image responsive to container size */
+    max-width: 400px;
+    margin: 0 auto;
   }
 
   #fh5co-work .fh5co-work-item .fh5co-overlay-text {
